# pymail2

./: README.md  setup.cfg  setup.py
.github/workflows/: publish.yml
pymail2/: __init__.py  core.py
