[metadata]
name = pymail2
version = 0.1.0
author = Avinash Negi
author_email = avinash.negi2194@gmail.com
description = This is most easiest way to send email using smtp
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/oakdatamechanic/pymail
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.6
install_requires =